# libhal-util

./: CMakeLists.txt  README.md  conanfile.py  doxygen.conf
.github/workflows/: 3.0.0-alpha.1.yml  4.0.0-alpha.1.yml  ci.yml  deploy.yml  presubmit.yml
api/: annotated.html  annotated_dup.js  as__bytes_8hpp.html  as__bytes_8hpp.js  as__bytes_8hpp_source.html  bit_8hpp.html  bit_8hpp.js  bit_8hpp_source.html  bit__limits_8hpp.html  bit__limits_8hpp.js  bit__limits_8hpp_source.html  can_8hpp.html  can_8hpp.js  can_8hpp_source.html  can__router_8hpp.html  can__router_8hpp.js  can__router_8hpp_source.html  classes.html  classhal_1_1bit_1_1modify-members.html  classhal_1_1bit_1_1modify.html  classhal_1_1bit_1_1modify.js  classhal_1_1bit_1_1modify__coll__graph.map  classhal_1_1bit_1_1modify__coll__graph.md5  classhal_1_1bit_1_1modify__inherit__graph.map  classhal_1_1bit_1_1modify__inherit__graph.md5  classhal_1_1bit_1_1value-members.html  classhal_1_1bit_1_1value.html  classhal_1_1bit_1_1value.js  classhal_1_1bit_1_1value__coll__graph.map  classhal_1_1bit_1_1value__coll__graph.md5  classhal_1_1bit_1_1value__inherit__graph.map  classhal_1_1bit_1_1value__inherit__graph.md5  classhal_1_1bit_1_1value_a8c4c86b19ecda16cbcf952e86b47897b_cgraph.map  classhal_1_1bit_1_1value_a8c4c86b19ecda16cbcf952e86b47897b_cgraph.md5  classhal_1_1can__router-members.html  classhal_1_1can__router.html  classhal_1_1can__router.js  classhal_1_1can__router__coll__graph.map  classhal_1_1can__router__coll__graph.md5  classhal_1_1move__interceptor-members.html  (+322 more)
api/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  concepts_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  (+40 more)
include/libhal-util/: as_bytes.hpp  bit.hpp  bit_limits.hpp  can.hpp  can_router.hpp  comparison.hpp  enum.hpp  i2c.hpp  input_pin.hpp  interrupt_pin.hpp  map.hpp  math.hpp  move_interceptor.hpp  output_pin.hpp  overflow_counter.hpp  serial.hpp  serial_coroutines.hpp  spi.hpp  static_callable.hpp  static_list.hpp  steady_clock.hpp  streams.hpp  timeout.hpp  to_array.hpp  units.hpp
src/: steady_clock.cpp  streams.cpp
test_package/: CMakeLists.txt  conanfile.py  libhal.tweaks.hpp  main.cpp
tests/: CMakeLists.txt  as_bytes.test.cpp  bit.functions.test.cpp  bit.test.cpp  callback_recorder.test.cpp  can.test.cpp  conanfile.py  conanfile.txt  enum.test.cpp  i2c.test.cpp  input_pin.test.cpp  interrupt_pin.test.cpp  main.test.cpp  map.test.cpp  math.test.cpp  move_interceptor.test.cpp  output_pin.test.cpp  overflow_counter.test.cpp  run.sh  serial.test.cpp  spi.test.cpp  static_callable.test.cpp  static_list.test.cpp  steady_clock.test.cpp  streams.test.cpp  timeout.test.cpp  units.test.cpp
